assets/deployment/notListedPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx 
  namespace: default
  labels:
    role: myrole
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
