assets/deployment/validPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ocatopic
  namespace: default
  labels:
    role: myrole
spec:
  containers:
    - name: ocatopic
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
